sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:6: error: value by is not a member of Int
  for(i<- getNombreValeurs()-1 by -1) {
                               ^