sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var ok = false
  var v = 0
  var k = 0
  for(i<- getNombreValeurs()-1 by -1) {
    v=getValeur(i)
    while(ok==false) {
      if(plusPetit(i -k,i-1 -k)) {
        copie(i-1, i)
      }
      else {
        ok= true
      }
      k=k+1
    }
  }
}